Fix spacing bug on login page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -836,7 +836,7 @@ footer {
 .title-text-aa {
   font-family: "Roboto", sans-serif;
   position: absolute;
-  top: 10vh;
+  top: 9vh;
   padding: 8px 7px 0px 7px;
   text-align: center;
   border-radius: 14px;
@@ -869,19 +869,19 @@ footer {
   background-color: rgba(33, 33, 33, 0.8);
   font-family: "Roboto", sans-serif;
   position: absolute;
-  top: 45vh;
+  top: 44vh;
   padding: 8px 7px 0px 7px;
   text-align: center;
   border-radius: 14px;
-  width: 70%;
+  width: 78%;
   color: #fef2d8;
-  left: 15%;
-  right: 15%;
+  left: 11%;
+  right: 11%;
 }
 
 .cover-text-aa > h2 {
-  padding-top: 10px;
-  padding-bottom: 15px;
+  padding-top: 6px;
+  padding-bottom: 10px;
   font-size: 120%;
 }
 
@@ -1193,7 +1193,7 @@ footer {
   }
 
   #hero-outer-aa {
-    height: 90vh;
+    height: 80vh;
     width: 100%;
     overflow: hidden;
     position: relative;
